Install node and setup database user for travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,14 @@ os:
 dist: xenial
 
 before_script:
-  - psql -c 'create database buffalo_spelunking_test;' -U postgres
+  - psql -c "create user buffalo_spelunking with password 'devpassword';" -U postgres
+  - psql -c 'create database buffalo_spelunking_test owner buffalo_spelunking;' -U postgres
   - mkdir -p $TRAVIS_BUILD_DIR/public/assets
   - go get -u -v github.com/gobuffalo/buffalo/buffalo
+  - wget https://raw.githubusercontent.com/creationix/nvm/v0.34.0/nvm.sh -O ~/.nvm/nvm.sh
+  - source ~/.nvm/nvm.sh
+  - nvm install 10
+  - npm install
 
 go:
   - "1.11.x"
