Create postgresql user as a superuser on travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 dist: xenial
 
 before_script:
-  - psql -c "create user buffalo_spelunking with password 'devpassword' createdb;" -U postgres
+  - psql -c "create user buffalo_spelunking with password 'devpassword' superuser;" -U postgres
   - mkdir -p $TRAVIS_BUILD_DIR/public/assets
   - go get -u -v github.com/gobuffalo/buffalo/buffalo
   - wget https://raw.githubusercontent.com/creationix/nvm/v0.34.0/nvm.sh -O ~/.nvm/nvm.sh
